manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burrow-server
  namespace: default
  labels:
    app: burrow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burrow-server
  template:
    metadata:
      labels:
        app: burrow-server
    spec:
      serviceAccountName: burrow-server
      containers:
        - name: server
          image: ghcr.io/splattner/burrow:latest
          imagePullPolicy: IfNotPresent
          args: ["server"]
          ports:
            - name: http
              containerPort: 8080
            - name: bridge
              containerPort: 1111
