manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burrow-server
  namespace: default
  labels:
    app: burrow-server
spec:
  selector:
    app: burrow-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
